--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 		</main>
 
 		<!--Gallery section -->
-		<section class="text-center bg-dark" id="gallery">
+		<section class="text-center" id="gallery">
 			<div class="tools">
-				<h2>Languages I Speak</h2>
+				<h2>LANGUAGES I SPEAK</h2>
 				<!-- Unordered List -->
 				<ul>
 					<!-- List items: -->
@@ -66,7 +66,7 @@
 			</div>
 
 			<div class="tools">
-				<h2>Tools I Use</h2>
+				<h2>TOOLS I USE</h2>
 				<ul>
 					<li>Git Bash / Terminal</li>
 					<li>Sublime Text</li>
