--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+	<main>
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+	<nav class="navbar navbar-expand-lg navbar-light bg-transparent text-dark fixed-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,11 +44,14 @@
 	<!-- Container for our layout -->
 	<div class="container-fluid">
 		<!-- Landing section -->
+		<main>
 		<section class="jumbotron text-center mt-3" id="landing">
-			<h1>Front End Web Developer & UX Designer</h1>
-			<p>Hi! I'm Lorz and I love designing!</p>
+			<h1>Front End Web Developer <br> & <br> UX Designer</h1>
+			<br>
+			<p>Hi! I'm Lorz and I would love to collaborate with you.</p>
 			<img src="images/lorz.png"/>
 		</section>
+		</main>
 
 		<!--Gallery section -->
 		<section class="text-center bg-dark" id="gallery">
